Tue Aug 24 11:31:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/Config_Handlers/Config.h:
          Removed not needed ; after namespace closure

Mon Aug 23 21:47:10 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* DAnCE/Config_Handlers/XSCRT/Elements.hpp:
	* DAnCE/Config_Handlers/XSCRT/Elements.ipp:
	* DAnCE/Config_Handlers/XSCRT/Elements.tpp:
	* DAnCE/Config_Handlers/XSCRT/ExtendedTypeInfo.hpp:
	* DAnCE/Config_Handlers/XSCRT/ExtendedTypeInfo.ipp:
	* DAnCE/Config_Handlers/XSCRT/Parser.hpp:
	* DAnCE/Config_Handlers/XSCRT/Parser.ipp:
	* DAnCE/Config_Handlers/XSCRT/Parser.tpp:
	* DAnCE/Config_Handlers/XSCRT/Traversal.hpp:
	* DAnCE/Config_Handlers/XSCRT/Traversal.ipp:
	* DAnCE/Config_Handlers/XSCRT/Traversal.tpp:
	* DAnCE/Config_Handlers/XSCRT/XMLSchema.hpp:
	* DAnCE/Config_Handlers/XSCRT/XMLSchema.ipp:
	* DAnCE/Config_Handlers/XSCRT/XMLSchema.tpp:

	  Added XSCRT 0.0.4 into the repository to compile the handlers.

Mon Aug 23 21:32:50 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* CIDLC/TypeNameEmitter.cpp:

	  Fixed a compiler error in the daily builds showing up from a
	  non-const declaration of a char * for extraction into an Any.

	* DAnCE/Config_Handlers/Config.h:

	  Deployment.h has been renamed to Config.h

	* DAnCE/Config_Handlers/Process_Element.h:
	* DAnCE/Config_Handlers/Basic_Handler.h:

	  Include Config.h

	* DAnCE/Config_Handlers/Basic_Deployment_Data.cpp:
	* DAnCE/Config_Handlers/Basic_Deployment_Data.hpp:
	* DAnCE/Config_Handlers/Deployment.cpp:
	* DAnCE/Config_Handlers/Deployment.hpp:
	* DAnCE/Config_Handlers/ccd.cpp:
	* DAnCE/Config_Handlers/ccd.hpp:
	* DAnCE/Config_Handlers/cdd.cpp:
	* DAnCE/Config_Handlers/cdd.hpp:
	* DAnCE/Config_Handlers/cdp.cpp:
	* DAnCE/Config_Handlers/cdp.hpp:
	* DAnCE/Config_Handlers/cid.cpp:
	* DAnCE/Config_Handlers/cid.hpp:
	* DAnCE/Config_Handlers/cpd.cpp:
	* DAnCE/Config_Handlers/cpd.hpp:
	* DAnCE/Config_Handlers/iad.cpp:
	* DAnCE/Config_Handlers/iad.hpp: