@@ -1,3 +1,8 @@
+Wed Aug 25 11:24:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * DAnCE/Config_Handlers/Config_Error_Handler.h:
+          Removed not needed ; after namespace closure
+
 Tue Aug 24 11:31:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * DAnCE/Config_Handlers/Config.h:
